# petals-container

./: .pdm-python  Dockerfile  pyproject.toml  server.py  startup.sh
.github/workflows/: docker-image.yml
